--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,19 @@
  *= require_tree .
  */
 
-body {margin:0;}
+body {
+  margin:0;
+
+}
+
+
+.next-video-button{
+  color: white;
+  border-radius: 3px;
+  background-color: #26A65B;
+  padding: 10px 25px 10px 25px;
+  border: 0;
+  font-size: 25px;
+
+
+}
