--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,20 +1,27 @@
- <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+<div class="navbar  navbar-fixed-top" role="navigation">
+     <div class="container-fluid">
+       <div class="navbar-header">
+         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+           <span class="sr-only">Toggle navigation</span>
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+         </button>
+         <a class="navbar-brand" href="#">Project name</a>
+       </div>
+       <div class="navbar-collapse collapse">
+         <ul class="nav navbar-nav navbar-right">
+            <% if current_user %>
+              <li><%= link_to "Log Out", destroy_user_session_path  %></li>
+            <% else %>
+              <%= link_to image_tag('/assets/fb.png', class: "fbbutton"), user_omniauth_authorize_path(:facebook) %>
+            <% end %>
+         </ul>
+
+        <%= form_for :post, :html => { :class => "navbar-left search-form"} do |f| %>
+          <img class="search-icon" src="http://png-4.findicons.com/files/icons/1389/g5_system/32/toolbar_find.png"/><%= search_field(:post, :title, placeholder: "Search Videos", class: "search rounded")  %>
+        <% end %>
+
+       </div>
+     </div>
+   </div>
