--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,5 @@
-<span class="nav"><%= button_to "I need more shit", post_path(@next_post), :method => :get %></nav>
-
-<div class="video-container">
-  <iframe width="640" height="360" src="//www.youtube.com/embed/<%=@video_id%>" frameborder="0" allowfullscreen></iframe>
-</div>
-
-<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
-
-
-<br/>
+<span class="video_page">
+  <iframe width="1280" height="700" src="http://www.youtube.com/embed/<%=@video_id%>?autoplay=1" frameborder="0" allowfullscreen></iframe>
+  <br/><br/>
+  <center><%= button_to "Next Video", post_path(@next_post), :method => :get, class: "next-video-button" %></nav>
+  </center>
