--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
        <div class="navbar-collapse collapse">
          <ul class="nav navbar-nav navbar-right">
           <% if current_user %>
-            <li class="nav-link"><%= link_to "Dashboard", root_path  %></li>
+            <li class="nav-link"><%= link_to "#{current_user.name}'s Dashboard", root_path  %></li>
             <li class="nav-link"><%= link_to "Log Out", destroy_user_session_path  %></li>
           <% else %>
             <li class="nav-link"><%= link_to "Sign In", user_omniauth_authorize_path(:facebook) unless current_user %></li>
