--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,10 @@
 <div class="show_video_page">
-  <iframe width="1280" height="600" src="http://www.youtube.com/embed/<%=@video_id%>?autoplay=1&start=0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="1280" height="600" src="http://www.youtube.com/embed/<%=@video_id%>?autoplay=1&start=" frameborder="0" allowfullscreen></iframe>
   <div class="row video_information">
     <div class="col-md-1"></div>
     <div class="col-md-8">
       <h3><%= @post.title %></h3>
-      <p><%= @post.description %></p>
+      <p>Posted on: <%= @post.date.strftime("%B %d, %Y") %></p>
     </div>
     <div class="col-md-2">
       <%= button_to "Gimme Another One", post_path(@next_post, :autoplay => 1), :method => :get, class: "next-video-button-below" %>
