--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -23,8 +23,13 @@
 
          </ul>
 
-        <%= form_for :post, :html => { :class => "navbar-left search-form"} do |f| %>
-          <img class="search-icon" src="http://png-4.findicons.com/files/icons/1389/g5_system/32/toolbar_find.png"/><%= search_field(:post, :title, placeholder: "Search Videos", class: "search rounded")  %>
+
+
+        <%= form_tag search_path, method: 'get', class: "search-form" do %>
+        <p>
+          <img class="search-icon" src="http://png-4.findicons.com/files/icons/1389/g5_system/32/toolbar_find.png"/>
+          <%= text_field_tag :query, params[:query], id: 'search_from' ,class: 'tags_with_autocomplete', :data => {autocompleteurl: autocomplete_tag_name_tags_path, placeholder: "Search standup..."} %>
+        </p>
         <% end %>
 
        </div>
