--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,9 @@
 <script src="http://www.youtube.com/iframe_api"></script>
 
 <div class="show_video_page">
-  <iframe id="explore_js" width="1280" height="700" src="https://www.youtube.com/embed/<%=@video_id%>?enablejsapi=1&autoplay=1&autohide=1&showinfo=0" frameborder="0" class="explore_embed" allowfullscreen></iframe>
-
+  <center>
+  <iframe id="explore_js" height="700" src="https://www.youtube.com/embed/<%=@video_id%>?enablejsapi=1&autoplay=1&autohide=1&showinfo=0" frameborder="0" class="explore_embed" allowfullscreen></iframe>
+  </center>
   <div class="row video_information">
     <div class="col-md-1"></div>
     <div class="col-md-8">
