--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   <script src="http://www.youtube.com/iframe_api"></script>
+  <meta name="viewport" content="width=device-width, user-scalable=no">
+
 </head>
 <body>
 
