--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,4 +1,13 @@
-<% @posts.each do |post| %>
-  <p><%= post.title %></p>
-<% end %>
+<br/>
+<div class="container">
+  <h2> Videos matching your search:</h2>
 
+  <% if @posts.length == 0 %>
+    <p> There are no videos matching your search. </p>
+  <% end %>
+  <% @posts.each do |post| %>
+    <% show_post = Post.find_by_title(post.title) %>
+    <p><a href="/posts/<%=show_post.id%>"><%= post.title %></a></p>
+  <% end %>
+</div>
+<br/>
