--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,17 +8,38 @@
            <span class="icon-bar"></span>
            <span class="icon-bar"></span>
          </button>
-         <img class="logo" src="http://i.imgur.com/mUvk8TD.png" />
+         <a href="/all"><img class="logo" src="/assets/W5.jpg" /></a>
        </div>
        <div class="navbar-collapse collapse">
+
          <ul class="nav navbar-nav navbar-right">
-          <% if current_user %>
-            <li class="nav-link"><%= link_to "#{current_user.name}'s Dashboard", root_path  %></li>
-            <li class="nav-link"><%= link_to "Log Out", destroy_user_session_path  %></li>
-          <% else %>
-            <li class="nav-link"><%= link_to "Sign In", user_omniauth_authorize_path(:facebook) unless current_user %></li>
-            <li class="nav-link"><%= link_to "Sign Up", user_omniauth_authorize_path(:facebook) unless current_user %></li>
-          <% end %>
+          <br/>
+          <li><a href="/all">All Videos</a></li>
+          <li><a href="/comedians">Comedians</a></li>
+          <li class="dropdown">
+                   <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Filter by Length <b class="caret"></b></a>
+                   <ul class="dropdown-menu">
+                     <li><a href="/short">Short (< 5 Minutes)</a></li>
+                     <li><a href="/medium">Medium (5-30 Minutes)</a></li>
+                     <li><a href="/long">Long (30 Minutes+)</a></li>
+                   </ul>
+                 </li>
+
+           <li class="dropdown">
+             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Filter by Category <b class="caret"></b></a>
+             <ul class="dropdown-menu">
+               <li><a href="/african_american">African American</a></li>
+               <li><a href="/asian">Asian</a></li>
+               <li><a href="/mei">Indian / Middle Eastern</a></li>
+               <li><a href="/latino">Latino</a></li>
+               <li><a href="/white">White</a></li>
+             </ul>
+           </li>
+
+           <% if current_user %>
+               <li><%= link_to "Log Out", destroy_user_session_path  %></li>
+            <% end %>
+
 
 
          </ul>
