--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,5 @@
-<div class="navbar role="navigation">
+<br/><br/>
+<!-- <div class="navbar" role="navigation">
      <div class="container-fluid">
        <div class="navbar-header">
 
@@ -8,7 +9,6 @@
            <span class="icon-bar"></span>
            <span class="icon-bar"></span>
          </button>
-         <a href="/all"><img class="logo" src="/assets/W5.jpg" /></a>
        </div>
        <div class="navbar-collapse collapse">
 
@@ -46,13 +46,7 @@
 
 
 
-        <%= form_tag search_path, method: 'get', class: "search-form" do %>
-        <p>
-          <img class="search-icon" src="http://png-4.findicons.com/files/icons/1389/g5_system/32/toolbar_find.png"/>
-          <%= text_field_tag :query, params[:query], id: 'search_from' ,class: 'tags_with_autocomplete', :data => {autocompleteurl: autocomplete_tag_name_tags_path, placeholder: "Search standup..."} %>
-        </p>
-        <% end %>
 
        </div>
      </div>
-   </div>
+   </div> -->
