--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,20 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-  <!-- DataTables CSS -->
-  <link rel="stylesheet" type="text/css" href="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/css/jquery.dataTables.css">
 
   <!-- jQuery -->
   <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>
 
-  <!-- DataTables -->
-  <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="/assets/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="/assets/component.css">
+  <link rel="stylesheet" type="text/css" href="/assets/default.css">
+  <link rel="stylesheet" type="text/css" href="/assets/neon.css">
+  <link rel="stylesheet" type="text/css" href="/assets/neon-core.css">
+  <link rel="stylesheet" type="text/css" href="/assets/neon-forms.css">
+  <link rel="stylesheet" type="text/css" href="/assets/neon-theme.css">
+  <link rel="stylesheet" type="text/css" href="/assets/wysihtml5-color.css">
+
+
 
   <script>
   /**
