--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -13,7 +13,6 @@
 
         <div class="sidebar-collapse">
           <a href="#" class="sidebar-collapse-icon with-animation"><!-- add class "with-animation" if you want sidebar to have animation during expanding/collapsing transition -->
-            <i class="entypo-menu"></i>
           </a>
         </div>
 
@@ -22,7 +21,7 @@
         <!-- open/close menu icon (do not remove if you want to enable menu on mobile devices) -->
         <div class="sidebar-mobile-menu visible-xs">
           <a href="#" class="with-animation"><!-- add class "with-animation" to support animation -->
-            <i class="entypo-menu"></i>
+            <i class="fa fa-bars"></i>
           </a>
         </div>
 
@@ -47,18 +46,19 @@
       </li>
       <li >
         <a href="/">
-          <i class="entypo-monitor"></i>
+          <i class="fa fa-youtube-play"></i>
           <span>All Videos</span>
         </a>
       <li>
         <a href="/comedians">
-          <i class="entypo-users"></i>
+          <i class="fa fa-user"></i>
           <span>Comedians</span>
         </a>
       </li>
 
       <li>
-          <a href=""><i class="entypo-clock"></i><span>Filter by Length</span></a>
+          <a href=""><i class="fa fa-clock-o"></i>
+            <span>Filter by Length</span></a>
 
 
           <ul>
@@ -78,7 +78,7 @@
       </li>
 
       <li>
-          <a href=""><i class="entypo-folder"></i><span>Filter by Category</span></a>
+          <a href=""><i class="fa fa-folder-open"></i><span>Filter by Category</span></a>
       </li>
 
 
