--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,15 @@
   <!-- jQuery -->
   <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>
 
+  <link rel="stylesheet" type="text/css" href="/assets/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="/assets/component.css">
+  <link rel="stylesheet" type="text/css" href="/assets/default.css">
+  <link rel="stylesheet" type="text/css" href="/assets/neon.css">
+  <link rel="stylesheet" type="text/css" href="/assets/neon-core.css">
+  <link rel="stylesheet" type="text/css" href="/assets/neon-forms.css">
+  <link rel="stylesheet" type="text/css" href="/assets/neon-theme.css">
+  <link rel="stylesheet" type="text/css" href="/assets/wysihtml5-color.css">
+
   <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
