--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
   <link rel="stylesheet" type="text/css" href="/assets/component.css">
   <link rel="stylesheet" type="text/css" href="/assets/default.css">
   <link rel="stylesheet" type="text/css" href="/assets/neon.css">
+  <link rel="stylesheet" type="text/css" href="/assets/mycss.css">
   <link rel="stylesheet" type="text/css" href="/assets/neon-core.css">
   <link rel="stylesheet" type="text/css" href="/assets/neon-forms.css">
   <link rel="stylesheet" type="text/css" href="/assets/neon-theme.css">
