--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,7 +15,7 @@
        <div class="row">
          <div class="col-md-1"></div>
          <div class="col-md-8">
-          <iframe id="explore_js" height="400" width="700" src="https://www.youtube.com/embed/<%=@video_id%>?enablejsapi=1&autoplay=1&autohide=1&showinfo=0" frameborder="0" class="explore_embed" allowfullscreen></iframe>
+          <iframe id="explore_js"  width="100%" src="https://www.youtube.com/embed/<%=@video_id%>?enablejsapi=1&autoplay=1&autohide=1&showinfo=0" frameborder="0" class="explore_embed" allowfullscreen></iframe>
         </div>
         <div class="col-md-1"></div>
       </div>
