--- a/public/assets/mycss.css
+++ b/public/assets/mycss.css
@@ -1,8 +1,8 @@
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+@media only screen and (min-width : 320px) and (max-width : 480px) {
 
 .explore_embed{
-  height:300px;
-  width: 100%;
+  height: 250px !important;
+  width: 100% !important;
 }
 
 }
