--- a/app/views/comedians/show.html.erb
+++ b/app/views/comedians/show.html.erb
@@ -32,7 +32,7 @@
     </div>
     <div class="col-md-2">
      <br/><br/>
-     <%= button_to "Next Video", comedian_path(@comedian, :autoplay => 1), :method => :get, class: "btn btn-success" %>
+     <%= button_to "Next Video", comedian_path(@comedian, :autoplay => 1), :method => :get, class: "btn btn-success next_video" %>
 
 
    </div>
