--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -34,7 +34,7 @@
         </div>
         <div class="col-md-2">
          <br/><br/>
-         <%= button_to "Next Video", post_path(@next_post, :autoplay => 1), :method => :get, class: "btn btn-success" %>
+         <%= button_to "Next Video", post_path(@next_post, :autoplay => 1), :method => :get, class: "btn btn-success next_video" %>
 
 
        </div>
