--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
   <!-- jQuery -->
   <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>
 
+  <!-- Stylesheets -->
+
   <link rel="stylesheet" type="text/css" href="/assets/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="/assets/component.css">
   <link rel="stylesheet" type="text/css" href="/assets/default.css">
@@ -24,8 +26,17 @@
   <link rel="stylesheet" type="text/css" href="/assets/neon-theme.css">
   <link rel="stylesheet" type="text/css" href="/assets/wysihtml5-color.css">
 
+
+
+
+
+  <!-- Responsive on Mobile -->
+
   <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+
+  <!-- Font Awesome -->
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
 
 
