--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,89 +1,39 @@
-<div class="sidebar-menu">
 
-    <header class="logo-env">
-
-        <!-- logo -->
-        <div class="logo">
-          <a href="http://demo.neontheme.com/dashboard/main/">
-            <img src="http://demo.neontheme.com/assets/images/logo@2x.png" width="120" alt="" />
-          </a>
+      <!-- Sidebar -->
+      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">SB Admin</a>
         </div>
 
-              <!-- logo collapse icon -->
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse left-nav">
+          <ul class="nav navbar-nav side-nav">
+            <li><a href="index.html"><i class="fa fa-dashboard"></i> Dashboard</a></li>
 
-        <div class="sidebar-collapse">
-          <a href="#" class="sidebar-collapse-icon with-animation"><!-- add class "with-animation" if you want sidebar to have animation during expanding/collapsing transition -->
-          </a>
-        </div>
-
-
-
-        <!-- open/close menu icon (do not remove if you want to enable menu on mobile devices) -->
-        <div class="sidebar-mobile-menu visible-xs">
-          <a href="#" class="with-animation"><!-- add class "with-animation" to support animation -->
-            <i class="fa fa-bars"></i>
-          </a>
-        </div>
-
-      </header>
-
-
-
-
-
-
-
-    <ul id="main-menu" class="">
-      <!-- add class "multiple-expanded" to allow multiple submenus to open -->
-      <!-- class "auto-inherit-active-class" will automatically add "active" class for parent elements who are marked already with class "active" -->
-      <!-- Search Bar -->
-      <li id="search">
-        <form method="get" action="/search">
-          <input type="text" name="search" class="search-input" placeholder="Search something..."/>
-
-
-        </form>
-      </li>
-      <li >
-        <a href="/">
-          <i class="fa fa-youtube-play"></i>
-          <span>All Videos</span>
-        </a>
-      <li>
-        <a href="/comedians">
-          <i class="fa fa-user"></i>
-          <span>Comedians</span>
-        </a>
-      </li>
-
-      <li>
-          <a href=""><i class="fa fa-clock-o"></i>
-            <span>Filter by Length</span></a>
-
-
-          <ul>
-
-            <li><a href="/short">Short (Under 5 Minutes)</a></li>
-            <li><a href="/medium">Medium (5-30 Minutes)</a></li>
-            <li><a href="/long">Long (30+ Minutes)</a></li>
-            <li><a href="/african_american">African American</a></li>
-            <li><a href="/asian">Asian</a></li>
-            <li><a href="/mei">Indian / Middle Eastern</a></li>
-            <li><a href="/latino">Latino</a></li>
-            <li><a href="/white">White</a></li>
-
-
-
+            <li><a href="bootstrap-elements.html"><i class="fa fa-desktop"></i> Bootstrap Elements</a></li>
+            <li><a href="bootstrap-grid.html"><i class="fa fa-wrench"></i> Bootstrap Grid</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-caret-square-o-down"></i> Dropdown <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Dropdown Item</a></li>
+                <li><a href="#">Another Item</a></li>
+                <li><a href="#">Third Item</a></li>
+                <li><a href="#">Last Item</a></li>
+              </ul>
+            </li>
           </ul>
 
-      </li>
 
-      <li>
-          <a href=""><i class="fa fa-folder-open"></i><span>Filter by Category</span></a>
-
-      </li>
+        </div><!-- /.navbar-collapse -->
+      </nav>
 
 
-    </ul>
 
-  </div>
+
