--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,17 +7,15 @@
 
 
 
-  <!-- Stylesheets -->
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
-  <link rel="stylesheet" type="text/css" href="/assets/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="/assets/component.css">
-  <link rel="stylesheet" type="text/css" href="/assets/default.css">
-  <link rel="stylesheet" type="text/css" href="/assets/neon.css">
-  <link rel="stylesheet" type="text/css" href="/assets/mycss.css">
-  <link rel="stylesheet" type="text/css" href="/assets/neon-core.css">
-  <link rel="stylesheet" type="text/css" href="/assets/neon-forms.css">
-  <link rel="stylesheet" type="text/css" href="/assets/neon-theme.css">
-  <link rel="stylesheet" type="text/css" href="/assets/wysihtml5-color.css">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
 
 
 
