--- a/app/views/comedians/index.html.erb
+++ b/app/views/comedians/index.html.erb
@@ -3,24 +3,23 @@
 
 
 
-  <div class="main-content">
+  <div id="page-wrapper">
 
-   <%= render 'layouts/navbar' %>
 
    <h2> Filter comedians by first name </h2>
    <br/>
-   <div class="col-md-12">
+   <div class="row">
 
       <div class="panel-group" id="accordion-test">
 
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseOne">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseOne">
                 A
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseOne" class="panel-collapse collapse in">
             <div class="panel-body">
               <br/>
@@ -37,13 +36,13 @@
         </div>
 
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseTwo">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseTwo">
                 B
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseTwo" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -60,13 +59,13 @@
         </div>
 
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseThree">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseThree">
                 C
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseThree" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -83,13 +82,13 @@
         </div>
 
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseFOUR">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseFOUR">
                 D
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseFOUR" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -106,13 +105,13 @@
         </div>
 
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseEE">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseEE">
                 E
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseEE" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -128,13 +127,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseFF">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseFF">
                 F
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseFF" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -150,13 +149,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseG">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseG">
                 G
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseG" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -172,13 +171,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseH">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseH">
                 H
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseH" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -194,13 +193,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseI">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseI">
                 I
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseI" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -216,13 +215,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseJ">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseJ">
                 J
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseJ" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -238,13 +237,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseK">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseK">
                 K
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseK" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -260,13 +259,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseL">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseL">
                 L
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseL" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -282,13 +281,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseM">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseM">
                 M
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseM" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -304,13 +303,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseN">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseN">
                 N
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseN" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -326,13 +325,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseO">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseO">
                 O
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseO" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -348,13 +347,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseP">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseP">
                 P
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseP" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -370,13 +369,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseQ">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseQ">
                 Q
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseQ" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -392,13 +391,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseR">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseR">
                 R
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseR" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -414,13 +413,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseS">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseS">
                 S
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseS" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -436,13 +435,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseT">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseT">
                 T
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseT" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -458,13 +457,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseU">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseU">
                 U
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseU" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -480,13 +479,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseV">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseV">
                 V
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseV" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -502,13 +501,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseW">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseW">
                 W
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseW" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -524,13 +523,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseX">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseX">
                 X
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseX" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -546,13 +545,13 @@
           </div>
         </div>
         <div class="panel panel-default">
-          <div class="panel-heading">
-            <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseY">
-                Y
-              </a>
-            </h4>
-          </div>
+         <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseY">
+         <div class="panel-heading">
+           <h4 class="panel-title">
+               Y
+           </h4>
+         </div>
+         </a>
           <div id="collapseY" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
@@ -568,13 +567,13 @@
           </div>
         </div>
         <div class="panel panel-default">
+          <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseZ">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion-test" href="#collapseZ">
                 Z
-              </a>
             </h4>
           </div>
+          </a>
           <div id="collapseZ" class="panel-collapse collapse">
             <div class="panel-body">
               <br/>
