--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-  <link rel="stylesheet" href="/theme.css">
+  <link rel="stylesheet" href="/assets/theme.css">
 
 
 
@@ -36,6 +36,7 @@
 
   <%= csrf_meta_tags %>
 </head>
+
 <body class="page-body">
 
 <%= yield %>
