--- a/public/assets/theme.css
+++ b/public/assets/theme.css
@@ -10,91 +10,30 @@ For more info and more free Bootstrap 3 HTML themes, visit http://startbootstrap
 
 /* Global Styles */
 
-body {
-  margin-top: 50px;
-}
 
-#wrapper {
-  padding-left: 0;
-}
+
 
 #page-wrapper {
   width: 100%;
-  padding: 5px 15px;
+  padding: 0px 15px;
 }
 
-/* Nav Messages */
-
-.messages-dropdown .dropdown-menu .message-preview .avatar,
-.messages-dropdown .dropdown-menu .message-preview .name,
-.messages-dropdown .dropdown-menu .message-preview .message,
-.messages-dropdown .dropdown-menu .message-preview .time {
-  display: block;
-}
-
-.messages-dropdown .dropdown-menu .message-preview .avatar {
-  float: left;
-  margin-right: 15px;
-}
-
-.messages-dropdown .dropdown-menu .message-preview .name {
-  font-weight: bold;
-}
-
-.messages-dropdown .dropdown-menu .message-preview .message {
-  font-size: 12px;
-}
-
-.messages-dropdown .dropdown-menu .message-preview .time {
-  font-size: 12px;
-}
-
-
-/* Nav Announcements */
-
-.announcement-heading {
-  font-size: 50px;
-  margin: 0;
-}
-
-.announcement-text {
-  margin: 0;
-}
-
-/* Table Headers */
-
-table.tablesorter thead {
-  cursor: pointer;
-}
-
-table.tablesorter thead tr th:hover {
-  background-color: #f5f5f5;
-}
-
-/* Flot Chart Containers */
-
-.flot-chart {
-  display: block;
-  height: 400px;
-}
-
-.flot-chart-content {
-  width: 100%;
-  height: 100%;
-}
 
 /* Edit Below to Customize Widths > 768px */
 @media (min-width:768px) {
 
   /* Wrappers */
 
-  #wrapper {
-  padding-left: 225px;
-  }
+
 
   #page-wrapper {
-  padding: 15px 25px;
+  padding-left:  255px;
+  top: 0 !important;
+  margin-top: -35px !important;
   }
+
+
+
 
   /* Side Nav */
 
@@ -102,12 +41,13 @@ table.tablesorter thead tr th:hover {
 
   width: 225px;
   position: fixed;
-  top: 50px;
+  top: 0;
   height: 100%;
   border-radius: 0;
   border: none;
   background-color: #222222;
   overflow-y: auto;
+  left: 0;
   }
 
   /* Bootstrap Default Overrides - Customized Dropdowns for the Side Nav */
@@ -124,44 +64,119 @@ table.tablesorter thead tr th:hover {
   -webkit-box-shadow: none;
   }
 
-  .side-nav>li.dropdown>ul.dropdown-menu>li>a {
-  color: #999999;
-  padding: 15px 15px 15px 25px;
-  }
 
-  .side-nav>li.dropdown>ul.dropdown-menu>li>a:hover,
-  .side-nav>li.dropdown>ul.dropdown-menu>li>a.active,
-  .side-nav>li.dropdown>ul.dropdown-menu>li>a:focus {
-  color: #fff;
-  background-color: #080808;
-  }
+
+
 
   .side-nav>li>a {
   width: 225px;
   }
 
-  .navbar-inverse .navbar-nav>li>a:hover,
-  .navbar-inverse .navbar-nav>li>a:focus {
-  background-color: #080808;
+ .sidebar_link {
+ background-color: #222222 !important;
+ color: white !important;
+ }
+
+
+  .sidebar_link:hover {
+  background-color: gray !important;
+  color: white !important;
   }
 
-  /* Nav Messages */
 
-  .messages-dropdown .dropdown-menu {
-  min-width: 300px;
+
+
+
+
+  .navbar-header{
+    visibility: hidden;
   }
 
-  .messages-dropdown .dropdown-menu li a {
-  white-space: normal;
+  .explore_embed{
+    height: 400px;
+    width: 100%;
+    padding-right: 15px;
   }
 
-  .navbar-collapse {
-    padding-right: 15px !important;
+  .wlogo{
+    font-weight: lighter;
   }
+
+  .sidebar_logo{
+    color: white;
+    font-size: 44px;
+
+  }
+
+  .sidebar_logo:hover{
+    color: white;
+    text-decoration: none;
+  }
+
+  .sidebar_logo_div{
+    padding-top: 30px;
+    padding-left: 70px;
+  }
+
+  .fa{
+    padding-right: 5px;
+  }
+
+
+
+
+}
+
+@media (max-width:768px) {
+  .explore_embed{
+    height: 300px;
+    width: 100%;
+  }
+
+  .wlogo{
+    font-weight: lighter;
+  }
+
+  .sidebar_logo{
+    visibility: hidden;
+  }
+
 
 }
 
 .left-nav{
   left: 0 !important;
   height: 100% !important;
+}
+
+
+
+.navbar-header{
+  background-color: black;
+}
+
+.icon-bar{
+  background-color: white;
+}
+
+.navbar-brand{
+  color: white;
+  padding-left: 25px;
+}
+
+.navbar-brand :hover{
+  color: white;
+}
+
+.panel-heading{
+  background-color: gray !important;
+}
+
+.panel-title{
+  color: white !important;
+}
+
+.panel-heading:hover{
+  color: white !important;
+  text-decoration: none;
 }
