--- a/app/views/comedians/index.html.erb
+++ b/app/views/comedians/index.html.erb
@@ -10,6 +10,8 @@
    <br/>
    <div class="row">
 
+    <div class="col-md-11">.
+
       <div class="panel-group" id="accordion-test">
 
         <div class="panel panel-default">
@@ -588,6 +590,7 @@
             </div>
           </div>
         </div>
+      </div>
 
 
 
