--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,15 +21,26 @@
 
    <div class="row">
     <iframe src="https://www.youtube.com/embed/<%=@video_id%>?enablejsapi=1&autoplay=1&autohide=1&showinfo=0" frameborder="0" class="explore_embed" allowfullscreen></iframe>
-       <h3><%= @post.title %></h3>
+    <div class="vid-description">
+        <h3>
+         <%= @post.title %>
+         <%= link_to "<i class='fa fa-flag report-vid' title='Report this video'></i>".html_safe, {:controller => "reports", :action => "report", :post_to_report => @post.id } %>
+
+       </h3>
        <% if @post.date %>
-       <p>Posted on <%= @post.date.strftime("%m/%d/%Y") %></p>
+       <p>
+        Posted on <%= @post.date.strftime("%m/%d/%Y") %>
+      </p>
+
 
        <% end %>
-       <p class="report"><%= link_to "Report Video", {:controller => "reports", :action => "report", :post_to_report => @post.id }%></p>
+
+       <p><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.waste5.com%2Fposts%2F<%=@post.id%>&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21&amp;appId=311642788912956" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe></p>
 
 
-      <%= button_to "Next Video", post_path(@next_post, :autoplay => 1), :method => :get, class: "btn btn-success next_video" %>
+
+      <%= button_to "Next Video", post_path(@next_post, :autoplay => 1), :method => :get, class: "btn btn-green next_video" %>
+      </div>
 
 
   </div>
